<resources>

    <string name="app_name">電卓！</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">電卓</string>
    
    <string name="button_result_del">削除</string>
    <string name="button_result">表示</string>
    <string name="button_clear">CLR</string>
    <string name="button_seven">7</string>
    <string name="button_height">8</string>
    <string name="button_nine">9</string>
    <string name="button_wari">/</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_kake">*</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_tree">3</string>
    <string name="button_hiki">-</string>
    <string name="button_zero">0</string>
    <string name="button_equal">=</string>
    <string name="button_tashi">+</string>

</resources>