<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/parent_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calc_background"
        android:columnCount="4"
        android:padding="10dip" >

        <!--■■■■■■■■■■■■　row0 ■■■■■■■■■■■■　-->

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@drawable/disp_background"
            android:gravity="right"
            android:padding="5dip"
            android:text="@string/button_zero"
            android:textSize="36sp" />

        <!-- ■■■■■■■■■■■■　row1 ■■■■■■■■■■■■　-->

        <Space
            android:id="@+id/space1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="1" />

        <Button
            android:id="@+id/button_result_delete"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@drawable/btn_background"
            android:text="@string/button_result_del" />
                
        <Button
            android:id="@+id/button_result"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@drawable/btn_background"
            android:text="@string/button_result" />
        
        <Button
            android:id="@+id/button1"
            android:layout_column="3"
            android:layout_row="1"
            android:background="@drawable/btn_background"
            android:text="@string/button_clear" />

        <!-- ■■■■■■■■■■■■　row2 ■■■■■■■■■■■■　-->

        <Button
            android:id="@+id/button2"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@drawable/btn_background"
            android:text="@string/button_seven" />

        <Button
            android:id="@+id/button3"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/btn_background"
            android:text="@string/button_height" />

        <Button
            android:id="@+id/button4"
            android:layout_column="2"
            android:layout_row="2"
            android:background="@drawable/btn_background"
            android:text="@string/button_nine" />

        <Button
            android:id="@+id/button5"
            android:layout_column="3"
            android:layout_row="2"
            android:background="@drawable/btn_background"
            android:text="@string/button_wari" />

        <!-- ■■■■■■■■■■■■　row3 ■■■■■■■■■■■■　-->

        <Button
            android:id="@+id/button6"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@drawable/btn_background"
            android:text="@string/button_four" />

        <Button
            android:id="@+id/button7"
            android:layout_column="1"
            android:layout_row="3"
            android:background="@drawable/btn_background"
            android:text="@string/button_five" />

        <Button
            android:id="@+id/button8"
            android:layout_column="2"
            android:layout_row="3"
            android:background="@drawable/btn_background"
            android:text="@string/button_six" />

        <Button
            android:id="@+id/button9"
            android:layout_column="3"
            android:layout_row="3"
            android:background="@drawable/btn_background"
            android:text="@string/button_kake" />

        <!-- ■■■■■■■■■■■■　row4 ■■■■■■■■■■■■　-->

        <Button
            android:id="@+id/button10"
            android:layout_column="0"
            android:layout_row="4"
            android:background="@drawable/btn_background"
            android:text="@string/button_one" />

        <Button
            android:id="@+id/button11"
            android:layout_column="1"
            android:layout_row="4"
            android:background="@drawable/btn_background"
            android:text="@string/button_two" />

        <Button
            android:id="@+id/button12"
            android:layout_column="2"
            android:layout_row="4"
            android:background="@drawable/btn_background"
            android:text="@string/button_tree" />

        <Button
            android:id="@+id/button13"
            android:layout_column="3"
            android:layout_row="4"
            android:background="@drawable/btn_background"
            android:text="@string/button_hiki" />

        <!-- ■■■■■■■■■■■■　row5　■■■■■■■■■■■■ -->

        <Button
            android:id="@+id/button14"
            android:layout_column="0"
            android:layout_row="5"
            android:background="@drawable/btn_background"
            android:text="@string/button_zero" />

        <Button
            android:id="@+id/button15"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:background="@drawable/btn_background"
            android:text="@string/button_equal" />

        <Button
            android:id="@+id/button16"
            android:layout_column="3"
            android:layout_row="5"
            android:background="@drawable/btn_background"
            android:text="@string/button_tashi" />
    </GridLayout>

</LinearLayout>